Fix ast linking

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,7 +6,5 @@ add_executable(
         main.cpp
         ast/Node.cpp ast/Node.h)
 
-target_link_libraries(flare ast lang)
-
 llvm_map_components_to_libnames(llvm_libs core native mcjit)
-target_link_libraries(flare ${llvm_libs})
+target_link_libraries(flare lang ast ${llvm_libs})
