--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(flare)
 set(CXX "clang++")
 set(CMAKE_CXX_STANDARD 20)
 
-set(CMAKE_CXX_FLAGS_DEBUG "-Wall -W -Werror -g -Wno-unused-parameter")
+set(CMAKE_CXX_FLAGS_DEBUG "-Wall -W -Werror -g -Wno-unused-parameter -Wno-redundant-move")
 set(CMAKE_CXX_FLAGS "-O3 -Wall -W -pedantic")
 
 
