--- a/src/ast/CMakeLists.txt
+++ b/src/ast/CMakeLists.txt
@@ -16,4 +16,4 @@ add_library(
         implementation/IfStatementNode.cpp IfStatementNode.h
         implementation/LogSmtNode.cpp LogSmtNode.h
         implementation/ValuePlaceholderNode.cpp ValuePlaceholderNode.h
-)
+        implementation/StatementNode.cpp StatementNode.h)
