--- a/src/ast/CMakeLists.txt
+++ b/src/ast/CMakeLists.txt
@@ -6,6 +6,10 @@ add_library(
         ast
         STATIC
 
+        constants/AstConstants.h
+        helpers/VariableHelper.h helpers/VariableHelper.cpp
+        helpers/Context.cpp helpers/Context.h
+
         implementation/Node.cpp Node.h
         implementation/ExprNode.cpp ExprNode.h
         implementation/LiteralNode.cpp LiteralNode.h
@@ -16,4 +20,9 @@ add_library(
         implementation/IfStatementNode.cpp IfStatementNode.h
         implementation/LogSmtNode.cpp LogSmtNode.h
         implementation/ValuePlaceholderNode.cpp ValuePlaceholderNode.h
-        implementation/StatementNode.cpp StatementNode.h helpers/Context.cpp helpers/Context.h implementation/FunctionNode.cpp FunctionNode.h implementation/LoopNode.cpp LoopNode.h helpers/VariableHelper.h helpers/VariableHelper.cpp implementation/FunctionCallNode.cpp FunctionCallNode.h helpers/AstConstants.h implementation/ClassDeclNode.cpp ClassDeclNode.h)
+        implementation/StatementNode.cpp StatementNode.h
+        implementation/FunctionNode.cpp FunctionNode.h
+        implementation/LoopNode.cpp LoopNode.h
+        implementation/FunctionCallNode.cpp FunctionCallNode.h
+        implementation/ClassDeclNode.cpp ClassDeclNode.h
+)
