ast: added exception classes and throw those

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,14 @@
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+
 add_subdirectory(ast)
 add_subdirectory(lang)
 add_subdirectory(jit)
+add_subdirectory(exceptions)
 
 add_executable(
         flare
         main.cpp
-        ast/implementation/Node.cpp ast/Node.h)
+)
 
 llvm_map_components_to_libnames(llvm_libs core native mcjit interpreter)
-target_link_libraries(flare lang ast jit ${llvm_libs})
+target_link_libraries(flare lang ast jit exceptions ${llvm_libs})
