ast: refactor literal node

--- a/src/exceptions/CMakeLists.txt
+++ b/src/exceptions/CMakeLists.txt
@@ -4,4 +4,4 @@ add_library(
 
         FlareException.cpp
         SemanticException.cpp
-)
+        UnimplementedException.cpp UnimplementedException.h)
