--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,5 +18,7 @@ message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
 message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
 message(STATUS "Using C_FLAGS: ${CMAKE_CXX_FLAGS}")
 
-
 add_subdirectory(src/)
+
+enable_testing()
+add_subdirectory(test/)
