ast: ffi include functionality #1

--- a/src/ast/CMakeLists.txt
+++ b/src/ast/CMakeLists.txt
@@ -21,4 +21,4 @@ add_library(
         implementation/LoopNode.cpp LoopNode.h
         implementation/FunctionCallNode.cpp FunctionCallNode.h
         implementation/ClassDeclNode.cpp ClassDeclNode.h
-        implementation/EmptyNode.cpp EmptyNode.h)
+        implementation/EmptyNode.cpp EmptyNode.h implementation/CffiIncludeNode.cpp CffiIncludeNode.h)
