type: added type system bare-bones

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,7 @@ add_subdirectory(ast)
 add_subdirectory(lang)
 add_subdirectory(jit)
 add_subdirectory(exceptions)
+add_subdirectory(types)
 
 add_executable(
         flare
@@ -11,7 +12,7 @@ add_executable(
         flare.cpp flare.h)
 
 llvm_map_components_to_libnames(llvm_libs core native mcjit interpreter)
-target_link_libraries(flare lang ast jit exceptions ${llvm_libs})
+target_link_libraries(flare lang ast jit exceptions types ${llvm_libs})
 
 add_custom_command(TARGET flare
         POST_BUILD
