--- a/src/types/CMakeLists.txt
+++ b/src/types/CMakeLists.txt
@@ -3,4 +3,4 @@ add_library(
         STATIC
 
         implementation/BaseType.cpp BaseType.h
-        implementation/IntType.cpp IntType.h)
+        implementation/IntType.cpp IntType.h StringType.cpp StringType.h)
