--- a/src/types/CMakeLists.txt
+++ b/src/types/CMakeLists.txt
@@ -3,4 +3,4 @@ add_library(
         STATIC
 
         implementation/BaseType.cpp BaseType.h
-        implementation/IntType.cpp IntType.h implementation/StringType.cpp StringType.h implementation/ClassObjectType.cpp ClassObjectType.h)
+        implementation/IntType.cpp IntType.h implementation/StringType.cpp StringType.h implementation/ClassObjectType.cpp ClassObjectType.h implementation/BoolType.cpp BoolType.h DoubleType.cpp DoubleType.h)
