--- a/src/ast/CMakeLists.txt
+++ b/src/ast/CMakeLists.txt
@@ -22,4 +22,4 @@ add_library(
         implementation/FunctionCallNode.cpp FunctionCallNode.h
         implementation/ClassDeclNode.cpp ClassDeclNode.h
         implementation/EmptyNode.cpp EmptyNode.h
-        implementation/TypeConvNode.cpp TypeConvNode.h)
+        implementation/TypeConvNode.cpp TypeConvNode.h ExceptionHandleNode.cpp ExceptionHandleNode.h)
