--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Configure CMake MacOS
         if: ${{ matrix.os == 'macos-latest' }}
         env:
-          LLVM_DIR: "/usr/local/Cellar/llvm/12.0.0_1/lib/cmake/"
+          LLVM_DIR: "/usr/local/Cellar/llvm/12.0.1/lib/cmake/"
           CMAKE_INCLUDE_PATH: "/usr/local/opt/flex/include"
           CMAKE_LIBRARY_PATH: "/usr/local/opt/flex/lib;/usr/local/opt/bison/lib"
         run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
