--- a/src/types/CMakeLists.txt
+++ b/src/types/CMakeLists.txt
@@ -3,4 +3,10 @@ add_library(
         STATIC
 
         implementation/BaseType.cpp BaseType.h
-        implementation/IntType.cpp IntType.h implementation/StringType.cpp StringType.h implementation/ClassObjectType.cpp ClassObjectType.h implementation/BoolType.cpp BoolType.h implementation/DoubleType.cpp DoubleType.h implementation/VoidType.cpp VoidType.h)
+        implementation/IntType.cpp IntType.h
+        implementation/StringType.cpp StringType.h
+        implementation/ClassObjectType.cpp ClassObjectType.h
+        implementation/BoolType.cpp BoolType.h
+        implementation/DoubleType.cpp DoubleType.h
+        implementation/VoidType.cpp VoidType.h
+)
