--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -34,7 +34,9 @@ jobs:
         run: |
           brew install bison
           brew install flex
+          brew install llvm@12
           echo "/usr/local/opt/flex/bin:/usr/local/opt/bison/bin" >> $GITHUB_PATH
+          echo "/usr/local/opt/llvm@12/bin" >> $GITHUB_PATH
 
       - name: Install Windows dependencies
         if: ${{ matrix.os == 'windows-latest' }}
@@ -49,7 +51,7 @@ jobs:
       - name: Configure CMake MacOS
         if: ${{ matrix.os == 'macos-latest' }}
         env:
-          LLVM_DIR: "/usr/local/Cellar/llvm/12.0.1/lib/cmake/"
+          LLVM_DIR: "/usr/local/opt/llvm@12/lib/cmake/llvm"
           CMAKE_INCLUDE_PATH: "/usr/local/opt/flex/include"
           CMAKE_LIBRARY_PATH: "/usr/local/opt/flex/lib;/usr/local/opt/bison/lib"
         run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
