--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_FLAGS_DEBUG "-Wall -W -Werror -g -Wno-unused-parameter -Wno-redundant-move")
 set(CMAKE_CXX_FLAGS "-O3 -Wall -W -pedantic -Wno-unused-parameter")
 
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DFLARE_DEBUG")
+set(CMAKE_CXX_FLAGS_DEBUG "${true} -DFLARE_DEBUG")
 
 # TODO add more platforms
 if(APPLE)
